--- a/index.html
+++ b/index.html
@@ -486,15 +486,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyBuvaglekgjf_blxf9w-nmKzhgXqDLeY50",
-  authDomain: "ekadasi-464ec.firebaseapp.com",
-  projectId: "ekadasi-464ec",
-  storageBucket: "ekadasi-464ec.firebasestorage.app",
-  messagingSenderId: "675683678626",
-  appId: "1:675683678626:web:d2273346d33b10f05d9afb",
-  measurementId: "G-E92Z0H30E2"
+  apiKey: "AIzaSyDPdkKqPdY73A59To_x1pSSSB_vNyXb-3A",
+  authDomain: "ekadasi-8ced1.firebaseapp.com",
+  projectId: "ekadasi-8ced1",
+  storageBucket: "ekadasi-8ced1.firebasestorage.app",
+  messagingSenderId: "567673142591",
+  appId: "1:567673142591:web:73b97332b8114fa20b678a",
+  measurementId: "G-BVPCQXDBD2"
 };
 
         // Initialize Firebase
