--- a/index.html
+++ b/index.html
@@ -486,10 +486,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyDPdkKqPdY73A59To_x1pSSSB_vNyXb-3A",
   authDomain: "ekadasi-8ced1.firebaseapp.com",
+  databaseURL: "https://ekadasi-8ced1-default-rtdb.firebaseio.com",
   projectId: "ekadasi-8ced1",
   storageBucket: "ekadasi-8ced1.firebasestorage.app",
   messagingSenderId: "567673142591",
